--- a/index.html
+++ b/index.html
@@ -1,45 +1,48 @@
 <!DOCTYPE html>
 <html lang="pt-br">
-
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Calculadora de Médias</title>
-</head>
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap"
+      rel="stylesheet"
+    />
+    <link rel="stylesheet" href="main.css" />
+  </head>
 
-<body>
-    <header>
-        <img src="./images/logo.png" alt="Logo: diploma e capelo">
+  <body>
+    <div class="container">
+      <header>
+        <img src="./images/logo.png" alt="Logo: diploma e capelo" />
         <h1>Calculadora de Médias</h1>
-    </header>
-    <form>
-        <input type="text" placeholder="Atividade">
-        <input type="number" placeholder="Nota" min="0" max="10">
+      </header>
+      <form id="formulario">
+        <input id="nomeAtividade" type="text" placeholder="Atividade"  required/>
+        <input id="notaAtividade" type="number" placeholder="Nota" min="0" max="10" required />
         <button type="submit">Adicionar +</button>
-    </form>
-    <table>
+      </form>
+      <table>
         <thead>
-            <tr>
-                <th>Nome da atividade</th>
-                <th>Nota da atividade</th>
-                <th>Aprovado?</th>
-            </tr>
+          <tr>
+            <th>Nome da atividade</th>
+            <th>Nota da atividade</th>
+            <th>Aprovado?</th>
+          </tr>
         </thead>
-        <tbody>
-            <tr>
-                <td>Atividade 1</td>
-                <td>7</td>
-                <td><img src="./images/aprovado.png" alt="Emoji festejando"></td>
-            </tr>
+        <tbody id="corpoTabela">
         </tbody>
         <tfoot>
-            <tr>
-                <td>Média Final</td>
-                <td>7</td>
-                <td>Aprovado</td>
-            </tr>
+          <tr>
+            <td>Média Final</td>
+            <td id="media-final-valor">---</td>
+            <td id="media-final-resultado">---</td>
+          </tr>
         </tfoot>
-    </table>
-</body>
-
+      </table>
+    </div>
+    <script src="main.js"></script>
+  </body>
 </html>
